[package]
name = "in-put"
version = "0.1.0"
edition = "2021"
authors = ["Nemo <altair.infamous@yahoo.com>"]
description = "The `input` macro provides a convenient way to read user input from the standard input, optionally with a prompt message, and attempts to parse it into the specified type."
license = "" # Specify the license
repository = "https://github.com/amirhu37/In-Put"
documentation = "https://docs.rs/in-put"
homepage = "https://github.com/amirhu37/In-Put"
readme = "README.md" 

[dependencies]
